kubernetes/gip-app/ingress/earnie-staging/earnie-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gip-app-service
  namespace: earnie-staging
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:865258441275:certificate/1830e54a-4d80-4a78-a92d-027ffef7e664
spec:
  rules:
  - host: dev-earnie.lightfoot.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gip-app-service
            port:
              number: 80
